# fcl

./: .gitignore  BUILD.bazel  CODEOWNERS  ChangeLog.md  LICENSE  README.md  WORKSPACE  bench.hs  cloudbuild.yaml  log.txt  package.yaml  release.sh  stack.yaml
api/: API.hs  SwaggerSchema.hs
app/: Example.hs  Main.hs
ci/: Dockerfile
examples/: all_types.s  amendment.s  amendment_gen.s  concurrent.s  counting.s  gas-forward.s  graph.s  loan_contract.s  loan_contract_gen.s  locals.s  minimal.s  notary.s  novation.s  product.s  simple.s  single.s  swap.s  zcb.s
examples/Examples/SafeWorkflow/: REPL.hs  TH.hs
examples/script/: all_types.s  gas-forward-simple.s  loan_contract.s  loan_contract_gen_reordered.s  minimal.s  notary.s  preconditions.s  product.s
exe/: Main.hs
http/: Main.hs  README.md
lsp/: Main.hs
notes/: soundness-checking.notes
scripts/: ci.sh
src/: Asset.hs  Contract.hs  Delta.hs  Encoding.hs  Hash.hs  Key.hs  Ledger.hs  SafeInteger.hs  SafeString.hs  Script.hs  Storage.hs  Utils.hs
src/Data/List/: List2.hs
src/HTTP/FCL/: API.hs  SwaggerSchema.hs
src/Language/FCL/: AST.hs  Account.hs  Address.hs  Analysis.hs  Asset.hs  Command.hs  Compile.hs  Contract.hs  Debug.hs  Delta.hs  Duplicate.hs  Effect.hs  Encoding.hs  Error.hs  Eval.hs  Graphviz.hs  GraphvizHacky.hs  Hash.hs  Init.hs  Key.hs  LanguageServerProtocol.hs  Lexer.hs  Metadata.hs  Orphans.hs  Parser.hs  Pretty.hs  Prim.hs  Reachability.hs  ReachabilityGraph.hs  ReachabilityGraphOLD.hs  SafeInteger.hs  SafeString.hs  SafeWorkflow.hs  Storage.hs  Time.hs  Token.hs  TxLog.hs  Typecheck.hs  Undefinedness.hs  Unsafe.hs  (+7 more)
src/Numeric/Lossless/: Decimal.hs  Number.hs  Taylor.hs  ℝ.hs
src/Numeric/Lossy/: Taylor.hs
src/Script/: Analysis.hs  Command.hs  Compile.hs  Duplicate.hs  Effect.hs  Error.hs  Eval.hs  Graphviz.hs  Init.hs  Lexer.hs  Parser.hs  Pretty.hs  Prim.hs  README.md  ReachabilityGraph.hs  Storage.hs  Token.hs  Typecheck.hs  Undefinedness.hs  Warning.hs  WorkflowNet.hs
swagger/: Main.hs  codegen.sh  swagger.json
test/: Main.hs  Reference.hs  TestArbitrary.hs  TestScript.hs  TestUndefinedness.hs  TestWarning.hs
test/golden/duplicates/: dupl-states-in-method-prec.out  shadowing.out
test/scripts/: sample.s  sample_errs.s  sample_eval.s
tests/: Golden.hs  Helpers.hs  KeyTests.hs  Main.hs  Reference.hs  TestArbitrary.hs  TestJson.hs  TestNumber.hs  TestScript.hs  TestSoundness.hs  TestStorage.hs  TestSwagger.hs  TestUndefinedness.hs  TestWorkflow.hs  WorkflowGen.hs  WorkflowGenExamples.hs  WorkflowGenTests.hs  docker-compose.postgres.yaml
tests/Test/: Encoding.hs  Golden.hs  Helpers.hs  Json.hs  Key.hs  Number.hs  Reference.hs  Script.hs  Storage.hs  Swagger.hs  Undefinedness.hs
tests/future-work/: README  incomplete_match.s  overlap_match.s
tests/json/: contract.json  storage.json
tests/typedefs/: menu.s
tests/workflow/: README.md
tests/workflow-builder/: README.md
(+555 files in other folders)
